--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.6",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "node": "^14.0.0",
     "react": "^16.13.1",
